--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,69 @@
+@import url("https://fonts.googleapis.com/css2?family=Muli&display=swap");
 * {
   box-sizing: border-box; }
 
 body {
+  font-family: 'Muli', sans-sarif;
+  background-image: url("../img/renders.jpg");
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   margin: 0;
   overflow: hidden; }
+
+.container {
+  display: flex;
+  width: 90vw; }
+  .container .panel {
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: flex 0.7s ease-in; }
+    .container .panel h3 {
+      font-size: 25px;
+      bottom: 20px;
+      left: 20px;
+      position: absolute;
+      opacity: 0;
+      margin: 0; }
+  .container .panel.active {
+    flex: 3; }
+    .container .panel.active h3 {
+      opacity: 1;
+      transition: opacity 0.4s ease-in 0.6s; }
+
+@media (max-width: 900px) {
+  .container {
+    width: 100vw; }
+    .container .panel:nth-of-type(9),
+    .container .panel:nth-of-type(10) {
+      display: none; } }
+
+@media (max-width: 700px) {
+  .container {
+    width: 100vw; }
+    .container .panel:nth-of-type(7),
+    .container .panel:nth-of-type(8) {
+      display: none; } }
+
+@media (max-width: 500px) {
+  .container {
+    width: 100vw; }
+    .container .panel:nth-of-type(5),
+    .container .panel:nth-of-type(6) {
+      display: none; } }
+
+@media (max-width: 380px) {
+  .container {
+    width: 100vw; }
+    .container .panel:nth-of-type(3),
+    .container .panel:nth-of-type(4) {
+      display: none; } }
