--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,13 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
+
 *{
     box-sizing: border-box;
 }
 
 body{
+    font-family: 'Muli', sans-sarif;
+    background-image: url("../img/renders.jpg");
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     margin: 0;
     overflow: hidden;
+}
+.container{
+    display: flex;
+    width: 90vw;
+//    background-color: #243F48;
+    .panel{
+        background-size: auto 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 80vh;
+        border-radius: 5px;
+        color: #fff;
+        cursor: pointer;
+        flex: 0.5;
+        margin: 10px;
+        position: relative;
+        transition: flex 0.7s ease-in;
+        h3{
+            font-size: 25px;
+            bottom: 20px;
+            left: 20px;
+            position: absolute;
+            opacity: 0;
+            margin: 0;
+        }
+    }
+    .panel.active{
+    flex: 3;
+    h3{
+        opacity: 1;
+        transition: opacity 0.4s ease-in 0.6s;
+    }
+    }
+}
+//media query for when the screen is small
+//below 900pixels
+@media (max-width: 900px) {
+    .container{
+        width: 100vw;
+        .panel:nth-of-type(9),
+        .panel:nth-of-type(10){
+            display: none;
+        }
+    }
+}
+
+//below 700 pixels
+@media (max-width: 700px) {
+    .container{
+        width: 100vw;
+        .panel:nth-of-type(7),
+        .panel:nth-of-type(8){
+            display: none;
+        }
+    }
+}
+
+//below 500 pixels
+@media (max-width: 500px) {
+    .container{
+        width: 100vw;
+        .panel:nth-of-type(5),
+        .panel:nth-of-type(6){
+            display: none;
+        }
+    }
+}
+//below 380 pixels
+@media (max-width: 380px) {
+    .container{
+        width: 100vw;
+        .panel:nth-of-type(3),
+        .panel:nth-of-type(4){
+            display: none;
+        }
+}
 }
