--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,14 +3,19 @@
   box-sizing: border-box; }
 
 body {
+  margin: 0;
+  background-color: #1D1F20;
+  color: #4E945F;
+  padding: 10px;
+  text-align: center;
+  overflow: hidden; }
+
+section {
   font-family: 'Muli', sans-sarif;
-  background-image: url("../img/renders.jpg");
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  margin: 0;
-  overflow: hidden; }
+  margin: 0; }
 
 .container {
   display: flex;
