--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,15 +5,23 @@
 }
 
 body{
+    margin: 0;
+    background-color: #1D1F20;
+    color: #4E945F;
+    padding: 10px;
+    text-align: center;
+    overflow: hidden;
+}
+section{
     font-family: 'Muli', sans-sarif;
-    background-image: url("../img/renders.jpg");
+    //background-image: url("../img/renders.jpg");
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    //min-height: 100vh;
     margin: 0;
-    overflow: hidden;
 }
+
 .container{
     display: flex;
     width: 90vw;
