updates overflow from hidden

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,7 @@ body {
   background-color: #1D1F20;
   color: #4E945F;
   padding: 10px;
-  text-align: center;
-  overflow: hidden; }
+  text-align: center; }
 
 section {
   font-family: 'Muli', sans-sarif;
